tests/sksl/errors/golden/ArrayConstructors.glsl
### Compilation failed:

error: 1: construction of array type 'float[]' is not allowed
error: 2: construction of array type 'float2[2]' is not allowed
error: 3: construction of array type 'float4x4[1][1]' is not allowed
3 errors
